--- a/public/index.html
+++ b/public/index.html
@@ -36,13 +36,13 @@
       <source src="./halloween.m4a" type="audio/mpeg" />
       </audio>
 <script type="text/javascript">
-  window.addEventListener('click', () => {
+  window.addEventListener('scroll', () => {
     audio = document.querySelector('audio')
-    if(audio.paused) {
-      audio.paused
+    if(audio.paused){
+      audio.play()
     } else {
-    audio.play()
-  }
+      audio.pause()
+    }
   })
 </script>
     <!--
